fixes #120 table header misalignment

--- a/static_media/css/main.css
+++ b/static_media/css/main.css
@@ -277,7 +277,7 @@ body {
 }
 .data_table  {
     padding:0;
-    margin-top:-20px;
+    margin-top:40px;
 }
 .data_table .column_ordering {
     margin:0 10px;
